# mp3-artist-tagger

./: .gitignore  README.md  pyproject.toml  set_artist.py  setup.cfg
src/mp3tagger/: __main__.py  set_artist.py
tests/: test_mp3tagger.py
