[metadata]
name = mp3tagger
version = 0.1.0
description = A package to update MP3 file metadata such as artist and album names.
long_description = file: README.md
long_description_content_type = text/markdown
author = Abdelrahman Shehata
author_email = dr.abdelrahman.nabil@gmail.com
url = https://github.com/prof-abdelrahman/mp3-tagger
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
install_requires =
    mutagen

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    mp3tagger = mp3tagger.__main__:main